[project]
name = "my-uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.43",
]
[project.optional-dependencies]
# 为你的 web 应用创建一个名叫 "web" 的分组
web = [
    "streamlit>=1.30.0", # 声明 streamlit 依赖
]
[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pyinstaller>=6.15.0",
]
